@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/gst-plugins-assrender
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-assrender/ChangeLog,v 1.67 2014/08/07 19:47:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-assrender/ChangeLog,v 1.68 2014/08/21 10:42:38 ago Exp $
+
+  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org>
+  gst-plugins-assrender-0.10.23-r1.ebuild,
+  gst-plugins-assrender-1.2.4-r1.ebuild:
+  Stable for ppc64, wrt bug #512012
 
   07 Aug 2014; Jeroen Roovers <jer@gentoo.org>
   gst-plugins-assrender-0.10.23-r1.ebuild,
